[package]
name = "pc-beeper"
version = "0.1.1"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "The most primitive audio device available on PC-compatible systems with characteristic 'beeps' and 'squeaks'"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/pc-beeper"
repository = "https://github.com/deadblackclover/pc-beeper"
keywords = ["pc_beeper", "pc_speaker", "no_std"]
categories = ["no-std", "os"]


[dependencies]
x86_64 = "0.14.10"
