[package]
name = "testing"
version = "0.1.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.9.3"
pc-beeper = { path = "../" }
spin = "0.5.2"
uart_16550 = "0.2.0"
vga = "0.2.4"
x86_64 = "0.11.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
